Fix child border radius issue with overflow hidden

--- a/client/stylesheets/comments.less
+++ b/client/stylesheets/comments.less
@@ -63,6 +63,7 @@
   padding: 0;
   background: #fff;
   .border-radius(@main-radius);
+  overflow: hidden;
 }
 .comment-header {
   padding: 20px 10px 10px;
